# apartheid

./: LICENSE  apartheid.py  pyproject.toml  setup.cfg  setup.py
examples/print_c_functions/: print_c_functions.py  print_c_functions_tests.py
tests/: apartheid_tests.py
